# Comp_Math

./: README.md
lb1/: CMakeLists.txt  README.MD  main.cpp  thomas_attractor
lb1/lb1/: main  opengl_sdl_example
